fix dev ops not building the first time

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "type": "module",
     "scripts": {
+        "init": "npm i",
         "dev": "node dev/dev",
         "dev:prod": "node dev/dev --prod"
     },
